Fixed z-index

--- a/popup.css
+++ b/popup.css
@@ -37,4 +37,5 @@ p {
   background-color: black;
   padding: 1rem;
   opacity: 0;
+  z-index: -1;
 }
